soroban-sdk/tests/macros_fails/macros_spec_fn_params_too_many.rs
use soroban_sdk::contractimpl;

pub struct Contract;

#[contractimpl]
impl Contract {
    pub fn pay(
        _: u32,
        _: u32,
        _: u32,
        _: u32,
        _: u32,
        _: u32,
        _: u32,
        _: u32,
        _: u32,
        _: u32,
        _: u32,
    ) {
        unimplemented!()
    }
}

pub fn main() {}
